2007-12-06 15:11 Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/JCAEMesher.java: Remove
	null messages sent to console.

2007-11-23 13:36 Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/AbstractEdgesAction.java
	  jcae-netbeans/src/org/jcae/netbeans/mesh/Group.java: Updated,
	exception handling has been modified in XMLHelper.
	* jcae-netbeans/src/org/jcae/netbeans/mesh/UNVToUNVAction.java:
	Updated, MeshWriter.writeObject3D() signature has changed.
	* jcae-netbeans/nbproject/project.xml: Add jcae-viewer3d-amibe.jar
	to classpath.

2007-11-13 18:32 Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/DecimateAction.java: Fix
	decimation, org.jcae.mesh.amibe.algos3d.DecimateHalfEdge has been
	renamed into org.jcae.mesh.amibe.algos3d.QEMDecimateHalfEdge.

2007-10-22 16:18  Jerome Robert <jeromerobert@users.sourceforge.net>

	* netbeans-suite/jcae-netbeans/src/org/jcae/netbeans/layer.xml:
	Add a "Paste" action to the "Mesh" nodes.

2007-10-19 12:27 Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/Groups.java: Update
	to latest jcae-viewer3d.
	* jcae-netbeans/src/org/jcae/netbeans/mesh/OEMMViewAction.java: Fix
	calls to OEMMViewer.

2007-08-11 16:27 Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/DecimateAction.java: Fix
	  org.jcae.mesh.amibe.algos3d.DecimateHalfEdge arguments, they have
	  been modified in Amibe.

2007-07-19 15:36  Denis Barbier <barbier@users.sourceforge.net>

	* jcae-netbeans/src/org/jcae/netbeans/mesh/BuidOEMMAction.java: Fix 
	  org.jcae.mesh.MeshOEMMIndex arguments.
	* jcae-netbeans/src/org/jcae/netbeans/mesh/DecimateAction.java: Fix
	  decimation, org.jcae.mesh.amibe.algos3d.DecimateVertex has been
	  replaced by org.jcae.mesh.amibe.algos3d.DecimateHalfEdge

2007-07-19 14:25  tag V0_14_2
